--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
             </div>
             <div class="profile-options">
                 <img class="icon content-icon" src="./logos/bell-ring-outline.png" alt="bell logo">
-                <img class="mini-profile-img" src="./profile-imgs/pexels-serena-koi-1576193.jpg" alt="profile image">
+                <img class="mini-profile-img" src="./profile-imgs/pexels-luis-quintero-2263822.jpg" alt="profile image">
                 <div> Morgan Oakley</div>
             </div>
             <div class="profile">
-                <img class="profile-img" src="./profile-imgs/pexels-serena-koi-1576193.jpg" alt="profile image">
+                <img class="profile-img" src="./profile-imgs/pexels-luis-quintero-2263822.jpg" alt="profile image">
                 <div class="profile-message">Hi there,</div>
                 <div class="profile-name">Morgan Oakley (@morgan)</div>
             </div>
@@ -95,79 +95,85 @@
                         Suspendisse sollicitudin nibh erat, id 
                         facilisis felis accumsan nec.</div>
                     </div>
-                    
-                    <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
-                    <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
-                    <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo">
+                    <div class="project-img">
+                        <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
+                        <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
+                        <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo">
+                    </div>
                 </div>
                 <div class="project-card">
                     <div class="project-content">
-
+                        <h3>Less Cool Project</h3>
+                        <div>Nullam condimentum ipsum ut lectus vehicula 
+                            consectetur. Quisque sed dolor tincidunt, 
+                            consectetur sapien ef, facilisis dolor. Duis sem 
+                            purus, dignissim ut sapien in, varius 
+                            pellentesque lacus.
+                        </div>
                     </div>
-                    <h3>Less Cool Project</h3>
-                    <div>Nullam condimentum ipsum ut lectus vehicula 
-                        consectetur. Quisque sed dolor tincidunt, 
-                        consectetur sapien ef, facilisis dolor. Duis sem 
-                        purus, dignissim ut sapien in, varius 
-                        pellentesque lacus.
+                    <div class="project-img">
+                        <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
+                        <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
+                        <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo">
                     </div>
-                    <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
-                    <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
-                    <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo">
                 </div>
                 <div class="project-card">
                     <div class="project-content">
-
+                        <h3>Impossible App</h3>
+                        <div>In hac habitasse platea dictumst. Vivamus 
+                            dictum rutrum arcu, a placerat velit sagittis 
+                            id.
+                        </div>
                     </div>
-                    <h3>Impossible App</h3>
-                    <div>In hac habitasse platea dictumst. Vivamus 
-                        dictum rutrum arcu, a placerat velit sagittis 
-                        id.
+                    <div class="project-img">
+                        <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
+                        <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
+                        <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo">
                     </div>
-                    <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
-                    <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
-                    <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo">
                 </div>
                 <div class="project-card">
                     <div class="project-content">
-
+                        <h3>Easy Peasy App</h3>
+                        <div>Etiam cursus eros ac efficitur fringilla. 
+                            Vestibulum dignissim urna eget accumsan 
+                            aliquam. Curabitur dignissim nisi in tortor 
+                            commodo, ac bibendum magna tincidunt.
+                        </div>
                     </div>
-                    <h3>Easy Peasy App</h3>
-                    <div>Etiam cursus eros ac efficitur fringilla. 
-                        Vestibulum dignissim urna eget accumsan 
-                        aliquam. Curabitur dignissim nisi in tortor 
-                        commodo, ac bibendum magna tincidunt.
+                    <div class="project-img">
+                        <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
+                        <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
+                        <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo"></div>
                     </div>
-                    <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
-                    <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
-                    <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo"></div>
                 <div class="project-card">
                     <div class="project-content">
-
+                        <h3>Ad Blocker</h3>
+                        <div>Quisque eget rutrum nisl. Nam augue 
+                            justo, cursus vitae metus vel, pharetra 
+                            hendrerit felis. Aliquam sed malesuada 
+                            eros.
+                        </div>
                     </div>
-                    <h3>Ad Blocker</h3>
-                    <div>Quisque eget rutrum nisl. Nam augue 
-                        justo, cursus vitae metus vel, pharetra 
-                        hendrerit felis. Aliquam sed malesuada 
-                        eros.
+                    <div class="project-img">
+                        <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
+                        <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
+                        <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo">
                     </div>
-                    <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
-                    <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
-                    <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo">
                 </div>
                 <div class="project-card">
                     <div class="project-content">
-
+                        <h3>Money Maker</h3>
+                        <div>Praesent convallis, ibero quis congue 
+                            elementum, nunc ante faucibus sapien, ac 
+                            scelerisque tortor purus sit amet ex. 
+                            Pellentesque mollis nec sem vel aliquam. 
+                        </div>
                     </div>
-                    <h3>Money Maker</h3>
-                    <div>Praesent convallis, ibero quis congue 
-                        elementum, nunc ante faucibus sapien, ac 
-                        scelerisque tortor purus sit amet ex. 
-                        Pellentesque mollis nec sem vel aliquam. 
+                    <div class="project-img">
+                        <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
+                        <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
+                        <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo">
                     </div>
-                    <img class="icon content-icon" src="./logos/star-plus-outline.png" alt="star-logo">
-                    <img class="icon content-icon" src="./logos/eye-plus-outline.png" alt="eye-logo">
-                    <img class="icon content-icon" src="./logos/source-fork.png" alt="share-logo">
                 </div>
             </div>
 
