--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div></div>
                     <div></div>
                 </div>
-                <div>Dashboard</div>
+                <h2>Dashboard</h2>
             </div>
             <ul>
                 <li class="options">
@@ -71,12 +71,12 @@
             <div class="profile-options">
                 <img class="icon content-icon" src="./logos/bell-ring-outline.png" alt="bell logo">
                 <img class="mini-profile-img" src="./profile-imgs/pexels-luis-quintero-2263822.jpg" alt="profile image">
-                <div> Morgan Oakley</div>
+                <h3> Morgan Oakley</h3>
             </div>
             <div class="profile">
                 <img class="profile-img" src="./profile-imgs/pexels-luis-quintero-2263822.jpg" alt="profile image">
-                <div class="profile-message">Hi there,</div>
-                <div class="profile-name">Morgan Oakley (@morgan)</div>
+                <div style="font-weight: bold;" class="profile-message">Hi there,</div>
+                <h2 class="profile-name">Morgan Oakley (@morgan)</h2>
             </div>
             <div class="content-options">
                 <input type="button" value="New">
@@ -91,7 +91,7 @@
                 <div class="project-card">
                     <div class="project-content">
                         <h3>Super Cool Project</h3>
-                        <div>Sed tempus ut lacus ut scelerisque. 
+                        <div>Sed tempus ut lacus ut scelerisque. <br>
                         Suspendisse sollicitudin nibh erat, id 
                         facilisis felis accumsan nec.</div>
                     </div>
@@ -134,7 +134,7 @@
                 <div class="project-card">
                     <div class="project-content">
                         <h3>Easy Peasy App</h3>
-                        <div>Etiam cursus eros ac efficitur fringilla. 
+                        <div>Etiam cursus eros ac efficitur fringilla. <br>
                             Vestibulum dignissim urna eget accumsan 
                             aliquam. Curabitur dignissim nisi in tortor 
                             commodo, ac bibendum magna tincidunt.
@@ -165,7 +165,7 @@
                         <h3>Money Maker</h3>
                         <div>Praesent convallis, ibero quis congue 
                             elementum, nunc ante faucibus sapien, ac 
-                            scelerisque tortor purus sit amet ex. 
+                            scelerisque tortor purus sit amet ex. <br>
                             Pellentesque mollis nec sem vel aliquam. 
                         </div>
                     </div>
